--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SOAD</title>
 </head>
 <body>
-    
+    <header>
+        <a href="https://www.youtube.com/channel/UC7-YMmnc0ppcWmio8t1WdcA">Canal do Youtube</a>
+        <a href="https://www.deezer.com/br/artist/458">Canal do deezer</a>
+    </header>
+    <h1>João Otávio Bertoldo dos Santos 1ºC</h1>
+    <p></p>
+    <p></p>
+    <h2></h2>
+    <p></p>
+    <ul>
+        <h3>Albuns</h3>
+        <li>System of a Down</li>
+        <li>Toxicyty</li>
+        <li>Hypnotize</li>
+        <li>Mezmerize</li>
+        <li>Steal this Album!</li>
+    </ul>
+    <img src="download.jpeg" alt="Integrantes da banda">
 </body>
 </html>
