--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <h1>João Otávio Bertoldo dos Santos 1ºC</h1>
     <p></p>
-    <p></p>
+    <p>System of a Down (também conhecida como <strong>SOAD</strong> ou simplesmente System) é uma banda de nu-metal armênio-americana formada em Glendale, Califórnia, em 1994. Desde 1997, banda é composta pelo vocalista principal Serj Tankian, o guitarrista solo e vocalista Daron Malakian, o baixista Shavo Odadjian e o baterista John Dolmayan, que substituiu o baterista original Andy Khachaturian.</p>
     <h2></h2>
     <p></p>
     <ul>
