--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <a href="https://www.deezer.com/br/artist/458">Canal do deezer</a>
     </header>
     <h1>João Otávio Bertoldo dos Santos 1ºC</h1>
-    <p></p>
-    <p>System of a Down (também conhecida como <strong>SOAD</strong> ou simplesmente System) é uma banda de nu-metal armênio-americana formada em Glendale, Califórnia, em 1994. Desde 1997, banda é composta pelo vocalista principal Serj Tankian, o guitarrista solo e vocalista Daron Malakian, o baixista Shavo Odadjian e o baterista John Dolmayan, que substituiu o baterista original Andy Khachaturian.</p>
+    <p>System of a Down (também conhecida como SOAD ou simplesmente System) é uma banda de nu-metal armênio-americana formada em Glendale, Califórnia, em 1994. Desde 1997, banda é composta pelo vocalista principal Serj Tankian, o guitarrista solo e vocalista Daron Malakian, o baixista Shavo Odadjian e o baterista John Dolmayan, que substituiu o baterista original Andy Khachaturian.</p>
+    <p>Todos os membros do System of a Down têm ascendência <strong>armênia</strong>, sendo nascidos de imigrantes armênios ou sendo eles mesmos os imigrantes.</p>
     <h2>Começo da banda</h2>
     <p><strong>Serj Tankian e Daron Malakian</strong>frequentaram a Escola Armênia Rose e Alex Pilibos quando crianças. No entanto, devido à diferença de oito anos de idade entre eles, eles só se conheceram em 1992 enquanto trabalhavam em projetos separados no mesmo estúdio de gravação.[3] Eles formaram uma banda chamada Soil, com Tankian nos vocais e teclados, Malakian nos vocais e guitarra, Dave Hakopyan (que mais tarde tocou no The Apex Theory/Mt. Helium) no baixo e Domingo "Dingo" Laranio na bateria. A banda contratou Shavo Odadjian (outro ex-aluno da Rose e Alex Pilibos) como empresário, embora ele acabasse se juntando ao Soil como segundo guitarrista. Em 1994, após apenas um show ao vivo e uma sessão de improvisação, Hakopyan e Laranio deixaram a banda.</p>
     <ul>
