--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         <li>Mezmerize</li>
         <li>Steal this Album!</li>
     </ul>
-    <img src="downlod.jpeg" alt="Integrantes da banda">
+    <img src="download.jpeg" alt="Integrantes da banda">
 </body>
 </html>
